--- a/Restaurant.PL/appsettings.json
+++ b/Restaurant.PL/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Restaurant.PL-68bc6adf-b8f4-4ba1-bc9b-f5b751a4855d;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=aspnet-Restaurant;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
